[FEAT] Add CSV case imports
